--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,7 @@
     "prefer-stable": true,
     "repositories": [],
     "require-dev": {
+        "phpunit/phpunit": "^7.0",
+        "symfony/phpunit-bridge": "^7.0"
     }
 }
