В типизации классы заменены на интерфейсы. В AbstractProcessor'е удалена ссылка prevProcessor - так и не понадобилась. Интерфейс UnsharedServiceInterface настроен по умолчанию как shared = false, т.к. любой сервис EntityProcessorInterface может стать частью естественной или искусственной цепочки, но при этом должен сохранять собственные настройки. Добавлен тест, что контейнер действительно возвращает при запросе разные экземпляры EntityProcessor'ов. EntityProcessorInterface наследуется от UnsharedServiceInterface, т.к. любой EntityProcessor по умолчанию должен быть как shared = false

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -12,6 +12,10 @@ services:
     autoconfigure: true
     public: false
 
+  _instanceof:
+    Demoniqus\EntityProcessor\Interfaces\UnsharedServiceInterface:
+      shared: false
+
   Demoniqus\EntityProcessor\Factory\EntitySaverFactory:
     public: true
 
